--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,7 @@ body {
   height: 100vh;
   background-color: #f0f0f0;
 }
+
 .calculator {
   background-color: #fff;
   border-radius: 8px;
@@ -12,6 +13,7 @@ body {
   padding: 20px;
   width: 450px;
 }
+
 .display {
   width: 410px;
   height: 40px;
@@ -24,6 +26,7 @@ body {
   font-size: 24px;
   overflow: scroll;
 }
+
 .button-container {
   display: grid;
   grid-template-columns: repeat(4, 100px);
@@ -31,6 +34,7 @@ body {
   gap: 10px;
   justify-content: center;
 }
+
 .button {
   width: 100px;
   height: 50px;
@@ -41,15 +45,18 @@ body {
   border: none;
   background-color: #f0f0f0;
 }
+
 .button.operation {
   background-color: #ff9500;
   color: white;
 }
+
 .button.equal {
   background-color: #34c759;
   color: white;
 }
+
 .button.clear {
-  background-color: #2196F3;
+  background-color: #2196f3;
   color: white;
 }
